{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 43,
  "lineage": "bb99ef1d-a2ba-1b01-f116-7a36d6038a26",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.93.249.29",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-05-26T02:34:06.323-07:00",
            "id": "projects/rohitgaur-313818/regions/asia-south1/addresses/tf-test-static-ip-db",
            "name": "tf-test-static-ip-db",
            "network_tier": "PREMIUM",
            "project": "rohitgaur-313818",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/regions/asia-south1/addresses/tf-test-static-ip-db",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/zones/asia-south1-b/instances/tf-test-instance-web"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.200.200.78",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-05-26T01:34:09.157-07:00",
            "id": "projects/rohitgaur-313818/regions/asia-south1/addresses/tf-test-static-ip-web",
            "name": "tf-test-static-ip-web",
            "network_tier": "PREMIUM",
            "project": "rohitgaur-313818",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/regions/asia-south1/addresses/tf-test-static-ip-web",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/zones/asia-south1-b/instances/tf-test-instance-db"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tf-firewall-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1433"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-05-26T02:34:06.316-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rohitgaur-313818/global/firewalls/tf-test-firewall-db",
            "log_config": [],
            "name": "tf-test-firewall-db",
            "network": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/global/networks/tf-test-network",
            "priority": 1000,
            "project": "rohitgaur-313818",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/global/firewalls/tf-test-firewall-db",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "allow-db"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "allow-web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "tf-firewall-rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389",
                  "5985",
                  "5986"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2021-05-26T02:34:06.162-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/rohitgaur-313818/global/firewalls/tf-test-firewall-rdp",
            "log_config": [],
            "name": "tf-test-firewall-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/global/networks/tf-test-network",
            "priority": 1000,
            "project": "rohitgaur-313818",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/global/firewalls/tf-test-firewall-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "allow-rdp"
            ],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tf-instance-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2016-dc-v20210511",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/zones/asia-south1-b/disks/tf-test-instance-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/rohitgaur-313818/zones/asia-south1-b/instances/tf-test-instance-db",
            "instance_id": "7845830059456965087",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "-3Z1-ACEYJg=",
            "name": "tf-test-instance-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.200.200.78",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/global/networks/tf-test-network",
                "network_ip": "10.160.0.3",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/regions/asia-south1/subnetworks/tf-test-network",
                "subnetwork_project": "rohitgaur-313818"
              }
            ],
            "project": "rohitgaur-313818",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/zones/asia-south1-b/instances/tf-test-instance-db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-db",
              "allow-rdp"
            ],
            "tags_fingerprint": "i_fRd1gqDD0=",
            "zone": "asia-south1-b"
          },
          "dependencies": [
            "google_compute_address.static-web",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "tf-instance-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/windows-cloud/global/images/windows-server-2016-dc-v20210511",
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/zones/asia-south1-b/disks/tf-test-instance-web"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Cascade Lake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/rohitgaur-313818/zones/asia-south1-b/instances/tf-test-instance-web",
            "instance_id": "7739417344140883609",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n2-standard-2",
            "metadata_fingerprint": "-3Z1-ACEYJg=",
            "name": "tf-test-instance-web",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.93.249.29",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/global/networks/tf-test-network",
                "network_ip": "10.160.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/regions/asia-south1/subnetworks/tf-test-network",
                "subnetwork_project": "rohitgaur-313818"
              }
            ],
            "project": "rohitgaur-313818",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/zones/asia-south1-b/instances/tf-test-instance-web",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "allow-rdp",
              "allow-web"
            ],
            "tags_fingerprint": "YDjo2yItQ-0=",
            "zone": "asia-south1-b"
          },
          "dependencies": [
            "google_compute_address.static-db",
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/rohitgaur-313818/global/networks/tf-test-network",
            "mtu": 0,
            "name": "tf-test-network",
            "project": "rohitgaur-313818",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/global/networks/tf-test-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "terraform-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-05-26T01:36:04.600-07:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/rohitgaur-313818/regions/asia-south1/subnetworks/tf-test-subnet1",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "tf-test-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/global/networks/tf-test-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "rohitgaur-313818",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/regions/asia-south1/subnetworks/tf-test-subnet1"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "terraform-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-05-26T01:36:04.461-07:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/rohitgaur-313818/regions/asia-south1/subnetworks/tf-test-subnet2",
            "ip_cidr_range": "10.1.0.0/16",
            "name": "tf-test-subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/global/networks/tf-test-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "rohitgaur-313818",
            "region": "asia-south1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/rohitgaur-313818/regions/asia-south1/subnetworks/tf-test-subnet2"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}